[gd_scene load_steps=59 format=3 uid="uid://cpji7l5haqnr3"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_ro37x"]
[ext_resource type="Texture2D" uid="uid://c0rvi45oevwia" path="res://Assets/Images/Animated Title-Sheet.png" id="2_7bkat"]
[ext_resource type="AudioStream" uid="uid://n6h38sb34vs3" path="res://Assets/Audio/Music/MenuTheme.wav" id="2_31f4q"]
[ext_resource type="Texture2D" uid="uid://bmdoliqpadg5w" path="res://Assets/Images/New Game Sprite.png" id="3_2xxj8"]
[ext_resource type="Texture2D" uid="uid://cru5wgv3lrfwi" path="res://Assets/Images/Load Game Sprite.png" id="4_540jc"]
[ext_resource type="Texture2D" uid="uid://dfvgp6m24jeau" path="res://Assets/Images/Options Sprite.png" id="5_ow5ys"]
[ext_resource type="Texture2D" uid="uid://dcmnsxi4poaih" path="res://Assets/Images/Quit Sprite.png" id="6_1qpjx"]
[ext_resource type="Texture2D" uid="uid://ceajg13c6ksex" path="res://Assets/Images/Music Sprite.png" id="7_56871"]
[ext_resource type="Script" path="res://Scripts/BGM Slider.gd" id="8_r3l5t"]
[ext_resource type="Script" path="res://FX Slider.gd" id="9_bx7ny"]
[ext_resource type="Texture2D" uid="uid://yuv1d4ml4dqt" path="res://Assets/Images/FX Sprite.png" id="10_0k0fn"]
[ext_resource type="Texture2D" uid="uid://b48xgug6yohqf" path="res://Assets/Images/Fullscreen Sprite.png" id="11_805df"]
[ext_resource type="Texture2D" uid="uid://bdt5tsds5ox3h" path="res://Assets/Images/Windowed Sprite.png" id="12_fasfo"]
[ext_resource type="Texture2D" uid="uid://tl43s6h8dx06" path="res://Assets/Images/Back Sprite.png" id="13_1ctc1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dsre"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_338l5"]

[sub_resource type="SystemFont" id="SystemFont_bkwg8"]
font_names = PackedStringArray("Sylfaen")

[sub_resource type="AtlasTexture" id="AtlasTexture_dsk2m"]
atlas = ExtResource("2_7bkat")
region = Rect2(0, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_32huu"]
atlas = ExtResource("2_7bkat")
region = Rect2(254, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaf5d"]
atlas = ExtResource("2_7bkat")
region = Rect2(508, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_vogs4"]
atlas = ExtResource("2_7bkat")
region = Rect2(762, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_xay0x"]
atlas = ExtResource("2_7bkat")
region = Rect2(1016, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_usvhe"]
atlas = ExtResource("2_7bkat")
region = Rect2(1270, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrrgx"]
atlas = ExtResource("2_7bkat")
region = Rect2(1524, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwwqj"]
atlas = ExtResource("2_7bkat")
region = Rect2(1778, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8fqn"]
atlas = ExtResource("2_7bkat")
region = Rect2(2032, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlkes"]
atlas = ExtResource("2_7bkat")
region = Rect2(2286, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cn1i"]
atlas = ExtResource("2_7bkat")
region = Rect2(2540, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f5l5"]
atlas = ExtResource("2_7bkat")
region = Rect2(2794, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_uebml"]
atlas = ExtResource("2_7bkat")
region = Rect2(3048, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kjqi"]
atlas = ExtResource("2_7bkat")
region = Rect2(3302, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e47u"]
atlas = ExtResource("2_7bkat")
region = Rect2(3556, 0, 254, 127)

[sub_resource type="AtlasTexture" id="AtlasTexture_k578y"]
atlas = ExtResource("2_7bkat")
region = Rect2(3810, 0, 254, 127)

[sub_resource type="SpriteFrames" id="SpriteFrames_fm6ag"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsk2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32huu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaf5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vogs4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xay0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usvhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrrgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8fqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlkes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cn1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f5l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uebml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kjqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e47u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k578y")
}],
"loop": true,
"name": &"menu_title_animation",
"speed": 9.0
}]

[sub_resource type="SystemFont" id="SystemFont_qq1hs"]
font_names = PackedStringArray("Fantasy")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_46rlq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p52n2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l0yac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yafjr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ymcd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c4y4d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_scjmm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xrvtp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d7h3j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0sn7k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjfmp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ujiqe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_12fs1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ncb5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_33wfh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dgf0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ulcb"]

[sub_resource type="SystemFont" id="SystemFont_r2yod"]
font_names = PackedStringArray("Fantasy")
subpixel_positioning = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_en0ny"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yugrg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xo6bq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4rtfd"]

[sub_resource type="SystemFont" id="SystemFont_x6e0n"]
font_names = PackedStringArray("Alagard")
subpixel_positioning = 0

[node name="main_menu_control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1dsre")

[node name="options_menu" type="VBoxContainer" parent="Background"]
visible = false
layout_mode = 2
offset_left = 12.0
offset_top = 87.0
offset_right = 1012.0
offset_bottom = 512.0
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="HSeparator" type="HSeparator" parent="Background/options_menu"]
visible = false
layout_mode = 2
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxEmpty_338l5")

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/options_menu"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Sprite2D" type="Sprite2D" parent="Background/options_menu/HBoxContainer2"]
scale = Vector2(1.89583, 1.89583)
texture = ExtResource("5_ow5ys")

[node name="HSeparator2" type="HSeparator" parent="Background/options_menu"]
layout_mode = 2
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxEmpty_338l5")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/options_menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BGM Vol" type="Label" parent="Background/options_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Music Volume: "

[node name="Sprite2D" type="Sprite2D" parent="Background/options_menu/VBoxContainer"]
position = Vector2(57, 6.99999)
scale = Vector2(0.64, 0.64)
texture = ExtResource("7_56871")

[node name="HSlider" type="HSlider" parent="Background/options_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
focus_mode = 0
min_value = -25.0
max_value = 0.0
step = 0.25
script = ExtResource("8_r3l5t")

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/options_menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Music Volume_" type="Label" parent="Background/options_menu/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 0)
text = "Music Volume: "

[node name="HSlider" type="HSlider" parent="Background/options_menu/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
focus_mode = 0
min_value = -25.0
max_value = 0.0
step = 0.25
script = ExtResource("9_bx7ny")

[node name="Sprite2D" type="Sprite2D" parent="Background/options_menu/VBoxContainer2"]
position = Vector2(59, 7.99999)
scale = Vector2(0.62, 0.62)
texture = ExtResource("10_0k0fn")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/options_menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100
alignment = 1

[node name="fullscreen_button" type="Button" parent="Background/options_menu/HBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("11_805df")
flat = true

[node name="windowed_button" type="Button" parent="Background/options_menu/HBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("12_fasfo")
flat = true

[node name="back_button" type="Button" parent="Background/options_menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
icon = ExtResource("13_1ctc1")
flat = true
icon_alignment = 1

[node name="menu_margin_container" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
script = ExtResource("1_ro37x")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/menu_margin_container"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="HSeparator" type="HSeparator" parent="Background/menu_margin_container/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 65

[node name="Game Title" type="Label" parent="Background/menu_margin_container/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.507244, 1.26945e-06, 1.92523e-07, 1)
theme_override_colors/font_shadow_color = Color(0.129412, 0.129412, 0.129412, 1)
theme_override_fonts/font = SubResource("SystemFont_bkwg8")
theme_override_font_sizes/font_size = 140
text = "Eternal Veil"

[node name="PanelContainer" type="PanelContainer" parent="Background/menu_margin_container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Background/menu_margin_container/VBoxContainer/PanelContainer"]
scale = Vector2(2.09843, 2.03937)
sprite_frames = SubResource("SpriteFrames_fm6ag")
animation = &"menu_title_animation"
autoplay = "menu_title_animation"
frame_progress = 0.0859907

[node name="HBoxContainer" type="HBoxContainer" parent="Background/menu_margin_container"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/menu_margin_container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 24
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Background/menu_margin_container/HBoxContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 175

[node name="new_game_button" type="Button" parent="Background/menu_margin_container/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.505882, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = SubResource("SystemFont_qq1hs")
theme_override_font_sizes/font_size = 62
theme_override_styles/hover = SubResource("StyleBoxEmpty_46rlq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p52n2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_l0yac")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yafjr")
action_mode = 0
icon = ExtResource("3_2xxj8")
flat = true
icon_alignment = 1

[node name="load_button" type="Button" parent="Background/menu_margin_container/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.505882, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = SubResource("SystemFont_qq1hs")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxEmpty_0ymcd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_c4y4d")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_scjmm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xrvtp")
action_mode = 0
icon = ExtResource("4_540jc")
flat = true
icon_alignment = 1

[node name="options_button" type="Button" parent="Background/menu_margin_container/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.505882, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = SubResource("SystemFont_qq1hs")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxEmpty_d7h3j")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0sn7k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jjfmp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ujiqe")
action_mode = 0
icon = ExtResource("5_ow5ys")
flat = true
alignment = 2
icon_alignment = 1

[node name="quit_button" type="Button" parent="Background/menu_margin_container/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.505882, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = SubResource("SystemFont_qq1hs")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxEmpty_12fs1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5ncb5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_33wfh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dgf0q")
action_mode = 0
icon = ExtResource("6_1qpjx")
flat = true
icon_alignment = 1

[node name="load_menu" type="VBoxContainer" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="Background/load_menu"]
layout_mode = 2
theme_override_constants/separation = 40
theme_override_styles/separator = SubResource("StyleBoxEmpty_8ulcb")

[node name="load_button" type="Button" parent="Background/load_menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.505882, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.47451, 0.47451, 0.47451, 1)
theme_override_colors/font_hover_color = Color(0.619608, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = SubResource("SystemFont_r2yod")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxEmpty_en0ny")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yugrg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_xo6bq")
action_mode = 0
button_mask = 0
icon = ExtResource("4_540jc")
flat = true
icon_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Background/load_menu"]
layout_mode = 2
theme_override_constants/separation = 85
theme_override_styles/separator = SubResource("StyleBoxEmpty_4rtfd")

[node name="File A" type="Button" parent="Background/load_menu"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.67451, 0.196078, 0.196078, 1)
theme_override_fonts/font = SubResource("SystemFont_x6e0n")
theme_override_font_sizes/font_size = 72
text = "File A"
flat = true

[node name="File B" type="Button" parent="Background/load_menu"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.67451, 0.196078, 0.196078, 1)
theme_override_fonts/font = SubResource("SystemFont_x6e0n")
theme_override_font_sizes/font_size = 72
text = "File B"
flat = true

[node name="File C" type="Button" parent="Background/load_menu"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.67451, 0.196078, 0.196078, 1)
theme_override_fonts/font = SubResource("SystemFont_x6e0n")
theme_override_font_sizes/font_size = 72
text = "File C"
flat = true

[node name="HSeparator3" type="HSeparator" parent="Background/load_menu"]
layout_mode = 2
theme_override_constants/separation = 85
theme_override_styles/separator = SubResource("StyleBoxEmpty_4rtfd")

[node name="back button" type="Button" parent="Background/load_menu"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.67451, 0.196078, 0.196078, 1)
theme_override_fonts/font = SubResource("SystemFont_x6e0n")
theme_override_font_sizes/font_size = 60
text = "Back"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_31f4q")
autoplay = true
bus = &"BGM"

[connection signal="value_changed" from="Background/options_menu/VBoxContainer/HSlider" to="Background/options_menu/VBoxContainer/HSlider" method="_on_value_changed"]
[connection signal="value_changed" from="Background/options_menu/VBoxContainer2/HSlider" to="Background/options_menu/VBoxContainer2/HSlider" method="_on_value_changed"]
[connection signal="pressed" from="Background/options_menu/HBoxContainer/fullscreen_button" to="Background/menu_margin_container" method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="Background/options_menu/HBoxContainer/windowed_button" to="Background/menu_margin_container" method="_on_windowed_button_pressed"]
[connection signal="pressed" from="Background/menu_margin_container/HBoxContainer/VBoxContainer/load_button" to="Background/menu_margin_container" method="_on_load_button_pressed"]
[connection signal="pressed" from="Background/load_menu/back button" to="Background/menu_margin_container" method="_on_load_back_button_pressed"]
